implemented predator pack tactics to join nearby hunts
Implements cooperative hunting logic:

- Coordinated Attack: Predators in SCOUTING mode detect active hunting partners.

- Join the Hunt: If a partner is chasing prey, the predator switches to HUNTING and moves to intercept.

- Flanking: Logic encourages pincer-like movement when multiple predators target the same group.